changes made to index.html file

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
     <h1>Design Customized</h1>
-    <h2>Greetings cards business</h2>
+    <h2>Greeting cards business</h2>
     <h1><img src="opening image.jpg"></h1>
     
     <header>
@@ -72,6 +72,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </body>
 </html>
+
 
 
 
