--- a/index.html
+++ b/index.html
@@ -61,17 +61,13 @@
                 <li><a href="#">SIGN UP</a></li>
             </ul>
         </nav>
-    </header>
     
-    <div class="search-container">
-        <input type="text" placeholder="Search">
-        <i class="search-icon fas fa-search"></i>
-    </div>
-
-    <!-- Include the Font Awesome CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </body>
 </html>
+<footer>
+<p>
+<small>DesignCustomized&copy;2023</small>
+</p>
 
 
 
