changes made to index.html file

--- a/index.html
+++ b/index.html
@@ -21,36 +21,12 @@
         color: #888585;
         margin-bottom: 50px;
       }
-
-      .search-container {
-        position: absolute;
-        top: 50px;
-        right: 70px;
-      }
-
-      .search-container input[type="text"] {
-        padding: 10px 20px;
-        width: 180px;
-        font-size: 20px;
-        color: #aca6a6;
-      }
-
-      .search-container .search-icon {
-        position: absolute;
-        top: 50%;
-        right: 10px;
-        transform: translateY(-50%);
-        color: #400dca;
-        cursor: pointer;
-      }
     </style>
 </head>
 <body>
     <h1>Design Customized</h1>
     <h2>Greeting cards business</h2>
     <h1><img src="opening image.jpg"></h1>
-    
-    <header>
         <nav>
             <ul>
                 <li><a href="#">HOME</a></li>
@@ -61,13 +37,13 @@
                 <li><a href="#">SIGN UP</a></li>
             </ul>
         </nav>
-    
+    <footer>
+        <p>
+            <small>DesignCustomized&copy;2023</small>
+        </p>
+    </footer>
 </body>
 </html>
-<footer>
-<p>
-<small>DesignCustomized&copy;2023</small>
-</p>
 
 
 
