--- a/HOME.html
+++ b/HOME.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
     <title>Design Customized</title>
     <style>
       body {
@@ -26,7 +24,19 @@
 <body>
     <h1>Design Customized</h1>
     <h2>Greeting cards business</h2>
-    <h1><img src="opening image.jpg"></h1>
+    <h1><img src="opening image.jpg" width="400"
+      alt="Message Is What We Do" title="Message Is What We Do"></h1>
+    <nav>
+    <ul>
+    <li><a href="/">HOME</a></li>
+    <li><a href="/">ABOUT US</a></li>
+    <li><a href="/">PRODUCTS</a></li>
+    <li><a href="/">SHOP</a></li>
+    <li><a href="/">CONTACT US</a></li>
+    </ul>
+    </nav>
+    </body>
+    </html>
         
 
 
