--- a/HOME.html
+++ b/HOME.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Design Customized</title>
+    <head>
+        <title>Design Customized</title>
+        <h1>Design Customized</h1>
+        <h2>Greeting cards business</h2>
+        <h1><img src="opening image.jpg" width="400"
+        alt="Message Is What We Do" title="Message Is What We Do"></h1>
+        <a href="ABOUT US.html">ABOUT US </a>
+        <a href="PRODUCTS.html">PRODUCTS </a>
+        <a href="SHOP.html">SHOP </a>
+        <a href="CONTACT US.html">CONTACT US </a>
     <style>
       body {
-        margin: 20px;
+        margin: 40px;
       }
 
       h1 {
-        font-size: 80px;
+        font-size: 70px;
         font-family: "voga", sans-serif;
-        margin-bottom: 6px;
+        margin-bottom: 5px;
+        margin-top: 5px;
       }
 
       h2 {
         font-size: 19px;
         font-family: "montserrat", serif;
         color: #888585;
-        margin-bottom: 50px;
+        margin-top: 5px;
+        margin-bottom: 5px;
       }
     </style>
-</head>
-<body>
-    <h1>Design Customized</h1>
-    <h2>Greeting cards business</h2>
-    <h1><img src="opening image.jpg" width="400"
-      alt="Message Is What We Do" title="Message Is What We Do"></h1>
+
     <nav>
     <ul>
     <li><a href="/">HOME</a></li>
