changes made to the html files

--- a/SHOP.html
+++ b/SHOP.html
@@ -5,6 +5,8 @@
     </head>
     <body bgcolor="#7FB3D5">
 
+        <a href="index.html">HOME </a>   
+
 
     <h1>This is a shop page</h1>
     <p>This is a paragraph.</p>
