--- a/CONTACT US.html
+++ b/CONTACT US.html
@@ -5,7 +5,7 @@
     </head>
     <body bgcolor="#7FB3D5">
     
-        <a href="index.html">HOME </a>    
+        <a href="HOME.html">HOME </a>    
 
 
     <h1>This is a contact us page</h1>
