--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
     </head>
     <body bgcolor="#7FB3D5">
 
-        <a href="index.html">HOME </a>   
+        <a href="index3.html">HOME </a>   
 
 
     <h1>This is a products page</h1>
