changes made to the folder

--- a/PRODUCTS.html
+++ b/PRODUCTS.html
@@ -5,7 +5,7 @@
     </head>
     <body bgcolor="#7FB3D5">
 
-        <a href="index3.html">HOME </a>   
+        <a href="HOME.html">HOME </a>   
 
 
     <h1>This is a products page</h1>
