--- a/HOME.html
+++ b/HOME.html
@@ -6,7 +6,7 @@
         <h2>Greeting cards business</h2>
         <h1><img src="opening image.jpg" width="400"
         alt="Message Is What We Do" title="Message Is What We Do"></h1>
-        <a href="index2.html">ABOUT US </a>
+        <a href="ABOUT US.html">ABOUT US </a>
         <a href="PRODUCTS.html">PRODUCTS </a>
         <a href="SHOP.html">SHOP </a>
         <a href="CONTACT US.html">CONTACT US </a>
