--- a/ABOUT US.html
+++ b/ABOUT US.html
@@ -9,7 +9,7 @@
 
 
 
-    <h1>This is an about us page</h1>
+    <h1>This about us page</h1>
     <p>This is a paragraph.</p>
 
     <img src="assets/images/home.jpg">     
