--- a/SHOP.html
+++ b/SHOP.html
@@ -5,7 +5,7 @@
     </head>
     <body bgcolor="#7FB3D5">
 
-        <a href="HOME.html">HOME </a>   
+        <a href="index.html">HOME </a>   
 
 
     <h1>This is a shop page</h1>
