changes made to index.html files

--- a/PRODUCTS.html
+++ b/PRODUCTS.html
@@ -4,13 +4,24 @@
         <title>PRODUCTS</title>
     </head>
     <body bgcolor="#7FB3D5">
+        <h1><img src="Cheeva 2.jpg" width="400"
+            alt="Birthday Cards" title="Birthday Cards"></h1>
+            <h1><img src="Cheeva 8.jpg" width="400"
+                alt="Congratulations Cards" title="Congratulations Cards"></h1>
+            <h1><img src="Cheeva 6.jpg" width="400"
+                    alt="Personal Cards" title="Personal Cards"></h1>
+            
+
+                        <li><a href="ABOUT US.html">ABOUT US</a></li>
+                        <li><a href="SHOP.html">SHOP</a></li>
+                        <li><a href="CONTACT US.html">CONTACT US</a></li>
+                        
 
         <a href="index.html">HOME </a>   
 
 
     <h1>This is a products page</h1>
     <p>This is a paragraph.</p>
-
-    <img src="assets/images/home.jpg">     
+ 
     </body>
 </html>
