--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
         <h2>Greeting cards business</h2>
         <h1><img src="opening image.jpg" width="400"
         alt="Message Is What We Do" title="Message Is What We Do"></h1>
-        <a href="ABOUT US.html">ABOUT US </a>
-        <a href="PRODUCTS.html">PRODUCTS </a>
-        <a href="SHOP.html">SHOP </a>
-        <a href="CONTACT US.html">CONTACT US </a>
+        <li><a href="index.html">HOME</a></li>
+        <li><a href="ABOUT US.html">ABOUT US</a></li>
+        <li><a href="PRODUCTS.html">PRODUCTS</a></li>
+        <li><a href="SHOP.html">SHOP</a></li>
+        <li><a href="CONTACT US.html">CONTACT US</a></li>
     <style>
       body {
         margin: 40px;
