--- a/ABOUT US.html
+++ b/ABOUT US.html
@@ -4,14 +4,17 @@
         <title>ABOUT US</title>
     </head>
     <body bgcolor="#7FB3D5">
+        <h1><img src="6.jpg" width="400"
+            alt="All About Greetings" title="All About Greetings"></h1>
+
+            <li><a href="PRODUCTS.html">PRODUCTS</a></li>
+            <li><a href="SHOP.html">SHOP</a></li>
+            <li><a href="CONTACT US.html">CONTACT US</a></li>
 
         <a href="index.html">HOME </a>   
 
-
-
     <h1>This about us page</h1>
     <p>This is a paragraph.</p>
-
-    <img src="assets/images/home.jpg">     
+      
     </body>
 </html>
