--- a/CONTACT US.html
+++ b/CONTACT US.html
@@ -4,6 +4,10 @@
         <title>CONTACT US</title>
     </head>
     <body bgcolor="#7FB3D5">
+
+        <li><a href="ABOUT US.html">ABOUT US</a></li>
+        <li><a href="PRODUCTS.html">PRODUCTS</a></li>
+        <li><a href="SHOP.html">SHOP</a></li>
     
         <a href="index.html">HOME </a>    
 
@@ -11,6 +15,5 @@
     <h1>This is a contact us page</h1>
     <p>This is a paragraph.</p>
 
-    <img src="assets/images/home.jpg">     
     </body>
 </html>
