--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Design Customized</title>
-        <h1>Design Customized</h1>
-        <h2>Greeting cards business</h2>
-        <h1><img src="opening image.jpg" width="400"
-        alt="Message Is What We Do" title="Message Is What We Do"></h1>
-        <li><a href="index.html">HOME</a></li>
-        <li><a href="ABOUT US.html">ABOUT US</a></li>
-        <li><a href="PRODUCTS.html">PRODUCTS</a></li>
-        <li><a href="SHOP.html">SHOP</a></li>
-        <li><a href="CONTACT US.html">CONTACT US</a></li>
+<head>
+    <title>Design Customized</title>
     <style>
-      body {
-        margin: 40px;
-      }
+        body {
+            margin: 40px;
+        }
 
-      h1 {
-        font-size: 70px;
-        font-family: "voga", sans-serif;
-        margin-bottom: 5px;
-        margin-top: 5px;
-      }
+        h1 {
+            font-size: 70px;
+            font-family: "voga", sans-serif;
+            margin-bottom: 5px;
+            margin-top: 5px;
+            color: black;
+        }
 
-      h2 {
-        font-size: 19px;
-        font-family: "montserrat", serif;
-        color: #888585;
-        margin-top: 5px;
-        margin-bottom: 5px;
-      }
+        h2 {
+            font-size: 19px;
+            font-family: "montserrat", serif;
+            color: #888585;
+            margin-top: 5px;
+            margin-bottom: 5px;
+        }
+
+        .home-page {
+            font-size: 16px;
+            font-family: "montserrat", sans-serif;
+            color: black;
+            margin: 20px;
+            margin-bottom: 20px;
     </style>
-
-    </body>
-    </html>
-        
+</head>
+<body>
+    <h1>Design Customized</h1>
+    <h2>Greeting cards business</h2>
+    <h2 class="home-page">Home Page</h2> 
+    <h1><img src="opening image.jpg" width="400" alt="Message Is What We Do" title="Message Is What We Do"></h1>
+    <li><a href="ABOUT US.html">ABOUT US</a></li>
+    <li><a href="PRODUCTS.html">PRODUCTS</a></li>
+    <li><a href="SHOP.html">SHOP</a></li>
+    <li><a href="CONTACT US.html">CONTACT US</a></li>
+</body>
+</html>
 
 
 
