all the changes made to the html files

--- a/PRODUCTS.html
+++ b/PRODUCTS.html
@@ -10,7 +10,7 @@
 
         .image-container img {
             width: 400px;
-            margin-right: 20px;
+            margin-right: 5px;
         }
 
         .image-container img:last-child {
@@ -21,7 +21,7 @@
 <body>
     <ul>
         <li><a href="ABOUT US.html">ABOUT US</a></li>
-        <li><a href="SHOP.html">SHOP</a></li>
+        <li><a href="SIGN UP.html">SIGN UP</a></li>
         <li><a href="CONTACT US.html">CONTACT US</a></li>
     </ul>
 
