--- a/ABOUT US.html
+++ b/ABOUT US.html
@@ -8,7 +8,7 @@
             alt="All About Greetings" title="All About Greetings"></h1>
 
             <li><a href="PRODUCTS.html">PRODUCTS</a></li>
-            <li><a href="SHOP.html">SHOP</a></li>
+            <li><a href="SIGN UP.html">SIGN UP</a></li>
             <li><a href="CONTACT US.html">CONTACT US</a></li>
 
         <a href="index.html">HOME </a>   
