--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <h1><img src="opening image.jpg" width="400" alt="Message Is What We Do" title="Message Is What We Do"></h1>
     <li><a href="ABOUT US.html">ABOUT US</a></li>
     <li><a href="PRODUCTS.html">PRODUCTS</a></li>
-    <li><a href="SHOP.html">SHOP</a></li>
+    <li><a href="SIGN UP.html">SIGN UP</a></li>
     <li><a href="CONTACT US.html">CONTACT US</a></li>
 </body>
 </html>
