changes made to the html files

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             font-size: 16px;
             font-family: "montserrat", sans-serif;
             color: black;
-            margin: 20px;
-            margin-bottom: 20px;
+            margin: -1px;
+            margin-top: 35px;
+            margin-bottom: 10px;
     </style>
 </head>
 <body>
