--- a/ABOUT US.html
+++ b/ABOUT US.html
@@ -1,20 +1,37 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>ABOUT US</title>
-    </head>
-    <body bgcolor="#7FB3D5">
-        <h1><img src="6.jpg" width="400"
-            alt="All About Greetings" title="All About Greetings"></h1>
+<head>
+    <title>About Us</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="PRODUCTS.html">PRODUCTS</a></li>
+                <li><a href="SIGN UP.html">SIGN UP</a></li>
+                <li><a href="CONTACT US.html">CONTACT US</a></li>
+            </ul>
+        </nav>
+    </header>
 
-            <li><a href="PRODUCTS.html">PRODUCTS</a></li>
-            <li><a href="SIGN UP.html">SIGN UP</a></li>
-            <li><a href="CONTACT US.html">CONTACT US</a></li>
+    <section>
+        <h2>About Us</h2>
+        <p>Design Customized was born out of a desire to create a service that provides a contemporary expression of the timeless tradition of personal card writing. Our vision is to help you reach out to those who are important to you. We create stories with our designs, and you personalize the cards with your own sentiments.</p>
+        <p>Embedded into our core business philosophy are concepts of quality and customer satisfaction.</p>
+    </section>
 
-        <a href="index.html">HOME </a>   
-
-    <h1>This about us page</h1>
-    <p>This is a paragraph.</p>
-      
-    </body>
+    <section> 
+        <h2>Testimonials</h2>
+        <blockquote>
+            <p>"I love all the customization options plus the simplicity of all the product and ordering process."<br>- Sarah, Nakuru</p>
+        </blockquote>
+        <blockquote>
+            <p>"The quality of the cards is unmatched."<br>- Liam, Nairobi</p>
+        </blockquote>
+        <blockquote>
+            <p>"The products are so well-made and the designs elevate your cards into something more beautiful."<br>- Zoe, Kisumu</p>
+        </blockquote>
+    </section>
+</body>
 </html>
