--- a/PRODUCTS.html
+++ b/PRODUCTS.html
@@ -28,12 +28,49 @@
     <a href="index.html">HOME </a>   
 
     <div class="image-container">
-        <img src="Cheeva 2.jpg" alt="Birthday Cards" title="Birthday Cards">
-        <img src="Cheeva 8.jpg" alt="Congratulations Cards" title="Congratulations Cards">
-        <img src="Cheeva 6.jpg" alt="Personal Cards" title="Personal Cards">
+        <img src="Cheeva 2.jpg" width="100" alt="Birthday Cards" title="Birthday Cards">
+        <img src="Cheeva 8.jpg" width="100" alt="Congratulations Cards" title="Congratulations Cards">
+        <img src="Cheeva 6.jpg" width="100" alt="Personal Cards" title="Personal Cards">
     </div>
 
-    <h1>This is a products page</h1>
-    <p>This is a paragraph.</p>
+    <h1>Our customizable All Occasion Cards </h1>
+    <div class="text-container">
+        <p>SEASONAL CARDS:
+            <select>
+                <option value="Christmas">Christmas</option>
+                <option value="Valentine's Day">Valentine's Day</option>
+                <option value="Mother's Day">Mother's Day</option>
+                <option value="Father's Day">Father's Day</option>
+                <option value="New Year's">New Year's</option>
+                <option value="Holiday Party Invitations">Holiday Party Invitations</option>
+                <option value="Easter">Easter</option>
+            </select>
+        </p>
+        <p>GREETINGS CARDS:
+            <select>
+                <option value="Birthday">Birthday</option>
+                <option value="Anniversary">Anniversary</option>
+                <option value="Thank You">Thank You</option>
+                <option value="Get Well Soon">Get Well Soon</option>
+                <option value="Calendar Cards">Calendar Cards</option>
+                <option value="Invitation Cards">Invitation Cards</option>
+                <option value="Wedding">Wedding</option>
+                <option value="Corporate Cards">Corporate Cards</option>
+                <option value="Baby Showers">Baby Showers</option>
+                <option value="Baptism and Christening">Baptism and Christening</option>
+                <option value="Feature Your Company Name Cards">Feature Your Company Name Cards</option>
+                <option value="Graduation">Graduation</option>
+                <option value="Teacher Appreciation">Teacher Appreciation</option>
+                <option value="Retirement">Retirement</option>
+                <option value="Congratulations">Congratulations</option>
+                <option value="Encouragement">Encouragement</option>
+                <option value="Love Cards">Love Cards</option>
+                <option value="Friendship">Friendship</option>
+                <option value="Sibling Cards">Sibling Cards</option>
+                <option value="Sympathy">Sympathy</option>
+        </p>
+    </div>
 </body>
 </html>
+
+
