all the changes made to the html files

--- a/CONTACT US.html
+++ b/CONTACT US.html
@@ -73,12 +73,11 @@
 </head>
 <body>
     <ul>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="ABOUT US.html">ABOUT US</a></li>
         <li><a href="PRODUCTS.html">PRODUCTS</a></li>
         <li><a href="SIGN UP.html">SIGN UP</a></li>
     </ul>
-
-    <a href="index.html">HOME</a>    
 
     <h1>CONTACT US</h1>
 
@@ -87,7 +86,7 @@
           
             <label for="help">How can we help you?</label>
             <select id="help" name="help">
-                <option value="general">General/Other</option>
+                <option value="General">General/Other</option>
                 <option value="My Order">My Order</option>
                 <option value="Support">Support</option>
                 <option value="Sales Enquiry">Sales Enquiry</option>
@@ -111,11 +110,12 @@
     <div class="contact-details">
         <h2>Get in touch</h2>
         <p>Please call us using the details below:</p>
-        <p "email-phone">Phone: <a href="CONTACT US.html">+254 765 234 675</a></p>
+        <p><span class="email-phone">Phone:</span> <a href="CONTACT US.html">+254 765 234 675</a></p>
         <p>Monday-Saturday</p>
         <p>9.00am - 7.00pm</p>
-        <p "email-phone">Email: <a href="CONTACT US.html">info@designcustomized.com</a></p>
+        <p><span class="email-phone">Email:</span> <a href="CONTACT US.html">info@designcustomized.com</a></p>
     </div>
+    
 
     <h1><img src="6.jpg" width="400"
 </body>
