--- a/SIGN UP.html
+++ b/SIGN UP.html
@@ -73,12 +73,11 @@
 </head>
 <body>
     <ul>
+        <li><a href="index.html">HOME</a></li>
         <li><a href="ABOUT US.html">ABOUT US</a></li>
         <li><a href="PRODUCTS.html">PRODUCTS</a></li>
-        <li><a href="SIGN UP.html">SIGN UP</a></li>
+        <li><a href="CONTACT US.html">CONTACT US</a></li>
     </ul>
-
-    <a href="index.html">HOME</a>    
 
     <h1>SIGN UP</h1>
 
@@ -91,28 +90,28 @@
             <input type="text" id="Name" name="Name">
 
             <label for="Last Name">Last Name</label>
-            <input type="tel" id="LastName" name="LastName">
+            <input type="tel" id="Last Name" name="Last Name">
 
             <label for="Email Address">Email Address</label>
-            <input type="tel" id="PhoneNumber" name="PhoneNumber"> 
+            <input type="tel" id="Email Address" name="Email Address"> 
 
             <label for="Address">Address</label>
-            <input type="tel" id="PhoneNumber" name="PhoneNumber"> 
+            <input type="tel" id="Address" name="Address"> 
 
             <label for="City">City</label>
-            <input type="tel" id="PhoneNumber" name="PhoneNumber"> 
+            <input type="tel" id="City" name="City"> 
 
             <label for="Country">Country</label>
-            <input type="tel" id="PhoneNumber" name="PhoneNumber"> 
+            <input type="tel" id="Country" name="Country"> 
 
             <label for="Postcode">Postcode</label>
-            <input type="tel" id="PhoneNumber" name="PhoneNumber"> 
+            <input type="tel" id="Postcode" name="Postcode"> 
 
             <label for="Password">Password</label>
-            <input type="tel" id="PhoneNumber" name="PhoneNumber"> 
+            <input type="tel" id="Password" name="Password"> 
 
             <label for="Confirm Password">Confirm Password</label>
-            <input type="tel" id="PhoneNumber" name="PhoneNumber"> 
+            <input type="tel" id="Confirm Password" name="Confirm Password"> 
 
            
 
