--- a/ABOUT US.html
+++ b/ABOUT US.html
@@ -2,10 +2,32 @@
 <html>
 <head>
     <title>About Us</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+
+        /* CSS styles for color styling */
+        #header-nav {
+            background-color: #ffffff;
+        }
+
+        .section-title {
+            color: rgb(21, 5, 248);
+        }
+
+        .testimonial {
+            color: green;
+        }
+
+        .highlight-text {
+            color: red;
+        }
+    </style>
 </head>
 <body>
     <header>
-        <nav>
+        <nav id="header-nav">
             <ul>
                 <li><a href="index.html">HOME</a></li>
                 <li><a href="PRODUCTS.html">PRODUCTS</a></li>
@@ -16,22 +38,31 @@
     </header>
 
     <section>
-        <h2>About Us</h2>
-        <p>Design Customized was born out of a desire to create a service that provides a contemporary expression of the timeless tradition of personal card writing. Our vision is to help you reach out to those who are important to you. We create stories with our designs, and you personalize the cards with your own sentiments.</p>
-        <p>Embedded into our core business philosophy are concepts of quality and customer satisfaction.</p>
+        <h2 class="section-title">About Us</h2>
+        <p>Design Customized was born out of a desire 
+        to create a service that provides a contemporary 
+        expression of the timeless tradition of personal card writing. 
+        Our vision is to help you reach out to those who are important to you. 
+        We create stories with our designs, and you personalize 
+        the cards with your own sentiments.</p>
+        <p>Embedded into our core business philosophy are concepts 
+        of <em class="highlight-text">quality</em> and <em class="highlight-text">customer satisfaction</em>.</p>
     </section>
 
     <section> 
-        <h2>Testimonials</h2>
-        <blockquote>
-            <p>"I love all the customization options plus the simplicity of all the product and ordering process."<br>- Sarah, Nakuru</p>
+        <h2 class="section-title">Testimonials</h2>
+        <blockquote class="testimonial">
+            <p>"I love all the <strong> customization </strong> options plus the <strong> simplicity </strong> of the products and the ordering process."<br>- Sarah, Nakuru</p>
         </blockquote>
-        <blockquote>
-            <p>"The quality of the cards is unmatched."<br>- Liam, Nairobi</p>
+        <blockquote class="testimonial">
+            <p>"The <em class="highlight-text"> <strong> quality of the cards </strong> </em> is unmatched."<br>- Liam, Nairobi</p>
         </blockquote>
-        <blockquote>
-            <p>"The products are so well-made and the designs elevate your cards into something more beautiful."<br>- Zoe, Kisumu</p>
+        <blockquote class="testimonial">
+            <p>"The products are so well-made and the designs <strong> elevate</strong> your cards into something more beautiful."<br>- Zoe, Kisumu</p>
         </blockquote>
     </section>
 </body>
 </html>
+
+
+
