changes made to the html files

--- a/PRODUCTS.html
+++ b/PRODUCTS.html
@@ -10,7 +10,7 @@
 
         .image-container img {
             width: 300px; /* Adjust the width as desired */
-            margin-right: -1px; /* Adjust the margin as desired */
+            margin: -1px; /* Adjust the margin as desired */
         }
 
         .image-container img:last-child {
