--- a/PRODUCTS.html
+++ b/PRODUCTS.html
@@ -9,12 +9,12 @@
         }
 
         .image-container img {
-            width: 300px; /* Adjust the width as desired */
-            margin: -1px; /* Adjust the margin as desired */
+            width: 300px; 
+            margin: -1px; 
         }
 
         .image-container img:last-child {
-            margin-right: 0;
+            margin: 1px
         }
         
         body {
@@ -33,7 +33,6 @@
             font-family: Arial, sans-serif;
         }
         
-        /* CSS styles for color styling */
         .section-title {
             color: rgb(21, 5, 248);
             font-size: smaller;
